# vos

./: Cargo.toml  Makefile  Makefile_c  Makefile_rust_1
.cargo/: config.toml
arch/x86_64/iso/boot/grub/: grub.cfg
src/: kernel_state.rs  main.rs  print.rs
src/asm/: grub.cfg  main.asm  multiboot2_header.asm
src/kernel/: main.c
src/util/: print.rs
src/video_memory_print/: char.rs  char_color.rs  color.rs  mod.rs  print.rs
src/x86_64/boot/: main64.asm
