[package]
name = "vos"
version = "0.1.0"
authors = ["Vidar Magnusson <git@vidarmagnusson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = {version = "0.2.14", default-features = false }
bootloader = "0.9.8"